Fix stuck sticky appearing on top of titlebar
This was causing flashing, and it looked weird even without the
flashing, since the titlebar border got covered up.

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -26,5 +26,7 @@
 }
 
 #zotero-title-bar {
+    position: relative;
+    z-index: 2;
     border-bottom: var(--material-panedivider);
 }
